--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>fion3tportfolio.wordpress.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>fion3t.github.io/portfolio/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+44 07383798766</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>London, UK</span></li>
                 </ul>
